fix: Fix some phone spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
 
 html, body {
-    background-image: url('../images/cover.jpg');
-    background-position:0 40%;
+    background-color: black;
     width: 100vw;
     height: 100vh;
     background-size: cover;
@@ -12,8 +11,21 @@ html, body {
     font-family: 'Poppins', sans-serif;
 }
 
+
+.cover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-image: url('../images/cover.jpg');
+    background-size: cover;
+    background-position:0 40%;
+    z-index:1;
+    width: 100vw;
+    height: 100vh;
+}
+
 .navbar {
-    z-index:2;
+    z-index:3;
 }
 
 .navbar-brand > img {
@@ -42,7 +54,8 @@ html, body {
     position: absolute;
     top: 0;
     left: 0;
-    height: 100vh
+    height: 100vh;
+    z-index: 2;
 }
 
 .dates {
@@ -64,7 +77,7 @@ html, body {
 }
 @media screen and (max-width: 1400px) {
     html, body {
-        font-size: 14px;
+        font-size: 12px;
     }
     
     .navbar-brand > img {
@@ -73,3 +86,21 @@ html, body {
 }
 
 
+@media screen and (max-width: 768px) {
+    html, body {
+        background-color: black;
+        opacity: 1;
+    }
+
+    .cover {
+        background-position: 70% 0;
+        opacity: 0.3;
+        filter: blur(1px);
+    }
+
+    .navbar-collapse {
+        padding-left: 2rem;
+        background-color: rgba(0,0,0,0.9);
+        padding-bottom: 2rem;
+    }
+}
